syntax = "proto3";
package builtin.reflection;

message GetMetaReq {
}

message GetMetaRsp {
    repeated string services = 1; // service name
    string description = 2;
    string meta_string = 3;
}

message Type {
    string type = 1;
    bytes value = 2;
}

message RpcRequest {
    bool is_streaming = 1;
}

message RpcResponse {
    bool is_streaming = 1;
}

message Rpc {
    string name = 1;
    RpcRequest request = 2;
    RpcResponse response = 3;
}

message GetRpcReq {
    string service_name = 1;
    string rpc_name = 2; // optional
}

message GetRpcRsp {
    repeated Rpc rpc = 1;
}

message InvokeReq {
    string service_name = 1;
    string rpc_name = 2;
    repeated bytes values = 3; 
}

message InvokeRsp {
    repeated bytes values = 2; 
}

service ReflectionSvr {
    rpc get_meta(GetMetaReq) returns (GetMetaRsp);

    rpc get_rpc(GetRpcReq) returns (GetRpcRsp);

    rpc invoke(InvokeReq) returns (InvokeRsp);
}